@@ -19,11 +19,19 @@ https://github.com/biemond/biemond-wls-vagrant-12.1.2
 Reference implementation, the vagrant test case for full working WebLogic SOA Suite, OIM and OAM example  
 https://github.com/biemond/biemond-wls-vagrant-oim  
 
+Reference implementation, the vagrant test case for full working WebLogic SOA Suite, OSB example  
+https://github.com/biemond/biemond-wls-vagrant-soa-osb  
+
+Reference implementation, the vagrant test case for full working WebLogic WebCenter , Content and BPM example  
+https://github.com/biemond/biemond-wls-vagrant-wc  
+
 
 Version updates
 ---------------
 
-- 1.3.6 remoteFile param for BSU,Opatch,SOA Suite and OIM 
+- 1.3.8 Option to override the server arguments in the domain templates, small bugfixes.
+- 1.3.7 javaParameters param for installwls ( support for Docker -Dspace.detection=false ,thanks Jyrk )
+- 1.3.6 remoteFile param for BSU,Opatch,SOA Suite, WebCenter, WebCenter Content and OIM 
 - 1.3.5 Nodemanager fix, Added AdminServer startup properties for Nodemanager, Readme update for OIM,OAM
 - 1.3.4 Nodemanager listen address, Domain ALSBdebug param check, remoteFile param for installwls ( for vagrant), managed server listen address, logdir fixes in copydomain & nodemanager, packdomain permissions fix, option to use copydomain without sshpass
 - 1.3.3 Option to override the Oracle operating user and provide your own domains home
@@ -886,6 +894,7 @@ WebLogic configuration examples
       domain          => $wlsDomainName,
       adminListenPort => $adminListenPort,
       nodemanagerPort => $nodemanagerPort,
+      java_arguments  => { "ADM" => "-XX:PermSize=256m -XX:MaxPermSize=512m -Xms1024m -Xmx1024m" },
       wlsUser         => "weblogic",
       password        => hiera('weblogic_password_default'),
       logDir          => $logDir,
